--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                             required class="input-area">
                         <p> <a href='./Registration/Registration.html'> Create an Account? </a> </p>
                         <input id="login-btn" type="submit" value="Login" class="login-btn">
-                        <p> <a href="#"> Forgot your password? </a> </p>
+                        <p> <a href="./ResetPassword/Resetpassword.html"> Forgot your password? </a> </p>
                     </form>
                     <div class="line">
                         <div class="line-1"></div> OR
